Fix button/icon alignment

--- a/src/overview/lesson/Header.scss
+++ b/src/overview/lesson/Header.scss
@@ -45,15 +45,17 @@
 	}
 
 	.layout-toggle {
+		display: flex;
+
 		label {
-			display: inline-block;
 			position: relative;
 
 			.toggle {
-				width: rem-calc(32px);
-				height: rem-calc(32px);
-				line-height: 2rem;
-				text-align: center;
+				width: 2rem;
+				height: 2rem;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				border-radius: 0 3px 3px 0;
 				box-shadow: 0 1px 0 0 var(--border-grey), 0 -1px 0 0 var(--border-grey), 1px 0 0 0 var(--border-grey), -1px 0 0 0 var(--border-grey);
 			}
@@ -81,7 +83,8 @@
 					0 1px 0 0 var(--border-grey),
 					0 -1px 0 0 var(--border-grey),
 					1px 0 0 0 var(--border-grey),
-					-1px 0 0 0 var(--border-grey) inset 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+					-1px 0 0 0 var(--border-grey),
+					inset 0 1px 2px 0 rgba(0, 0, 0, 0.25);
 			}
 		}
 	}
